# AGenUI

./: README.md  README.zh-CN.md
.github/workflows/: ci-android.yml  release-android.yml  release-ios.yml
core/include/: agenui_version.h
core/src/surface/component_property_spec/: agenui_component_spec_config.h
playground/android/app/src/main/java/com/amap/agenuiplayground/stability/: StabilityScenarioEngine.java
playground/harmony/entry/src/main/ets/pages/: AGenUIDemoPage.ets
playground/ios/Playground/Playground for AGenUI/Utils/: PlaygroundRuntimeLogger.swift
scripts/: sync-version.sh
scripts/android/: build.sh
scripts/common/: _common.sh
scripts/harmony/: build.sh
tests/cpp/: BUILD.md  CMakeLists.txt  README.md  main.cpp
tests/cpp/ci/: github-actions.yml  run_tests.sh
tests/cpp/concurrency/: engine_chaos_test.cpp  lifecycle_race_test.cpp  listener_boundary_test.cpp  multi_sm_test.cpp  ordering_test.cpp  queue_pressure_test.cpp
tests/cpp/fixtures/protocol/: create_surface.json  delete_surface.json  update_components.json
tests/cpp/ide/xcode/: README.md  generate.sh
tests/cpp/integration/: engine_destroy_chain_test.cpp  engine_lifecycle_test.cpp  event_listener_test.cpp  function_call_test.cpp  streaming_pipeline_test.cpp  surface_manager_test.cpp  theme_designtoken_test.cpp  ui_action_test.cpp
tests/cpp/sanitizer/: memory_safety_test.cpp  thread_sanitizer_test.cpp
tests/cpp/stress/: stream_stress_test.cpp
tests/cpp/support/: fixture_loader.h  mock_message_listener.h  mock_platform_function.h  scoped_surface_manager.h  test_env.h  thread_sync_helper.h
tests/cpp/unit/function_call/: builtins_test.cpp
tests/cpp/unit/module/: event_dispatcher_test.cpp  message_thread_test.cpp  thread_manager_test.cpp
tests/cpp/unit/stream/: composite_stream_plugin_test.cpp  markdown_stream_plugin_test.cpp  protocol_stream_extractor_test.cpp  stream_datamodel_test.cpp  stream_extractor_chunking_test.cpp  stream_extractor_special_chars_test.cpp  text_stream_plugin_test.cpp
tests/cpp/unit/stream/integration/: stream_chunking_integration_test.cpp  stream_datamodel_integration_test.cpp  stream_integration_base.h  stream_markdown_integration_test.cpp  stream_realistic_integration_test.cpp  stream_special_chars_integration_test.cpp  stream_text_integration_test.cpp
tests/stability/: run.sh
